[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbit"
version = "0.2.8"
authors = [
  { name="nightcycle", email="coyer@nightcycle.us" },
]
dependencies = [
	"pandas~=2.0.0",
]
description = "a package with useful functions for downloading and working with midas generated analytics data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
